# cu-ece-357

./: README.md
hw-problems/: get-wxx
hw/hw1p1/: Makefile  kitty.c  program.c  program.h  solutions.md
hw/hw1pr3/: Makefile  screenlog.0
hw/hw2p1/: Problem 2.md  Problem 2.rst
hw/hw2pr3/: Makefile  badfind.c
hw/hw3p1/: Problem 1.rst  Problem 1A.c
hw/hw3pr3/: Makefile  gjshell.c
hw/hw4p1/: Problem 1.rst  Problem 2.rst
hw/hw4pr34/: Makefile  hw4pr3.c  hw4pr4.c  session-recording
hw/hw5p1/: Problem 1.rst
hw/hw5p12/: Problem 1.rst  Problem 2.rst  converter.c
hw/hw5pr3/: Makefile  mtest.c
hw/hw6p1/: Problem 1.rst  partb.c  partc.c
hw/hw6pr2/: .gitignore  CMakeLists.txt  Makefile  README.md  sem.c  sem.h  shell.c  shell.h  spinlock.c  spinlock_test.c  spinlock_test.h  test.c  test.h
hw/hw6pr2/locks/: sem.c  sem.h  spinlock.c  spinlock.h
hw/hw7/: Makefile  asmcat.S  session-recording
